--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -7,7 +7,7 @@
 body {
     background-color: #d9dcd6;
 }
-
+/*Changed the header class to apply to the entire header section*/
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -23,7 +23,7 @@ header h1 {
 header h1 .seo {
     color: #d9dcd6;
 }
-
+/*Replaced Div with Section to better align with html*/
 header section {
     padding-top: 15px;
     margin-right: 20px;
@@ -31,7 +31,7 @@ header section {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-
+/*Combined divs into one section*/
 header section ul li {
     list-style-type: none;
     display: inline-block;
@@ -82,23 +82,23 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-
+/*Consolidated these 3 tags to share the same attributes*/
 .benefit-lead, .benefit-brand, .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
-
+/*Consolidated these 3 tags to share the same attributes*/
 .benefit-lead h3, .benefit-brand h3, .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-
+/*Consolidated these 3 tags to share the same attributes*/
 .benefit-lead img, .benefit-brand img, .benefit-cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
+/*Consolidated these 3 tags to share the same attributes*/
 .search-engine-optimization, .online-reputation-management, .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
@@ -107,11 +107,11 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-
+/*Consolidated these 3 tags to share the same attributes*/
 .search-engine-optimization img, .online-reputation-management img, .social-media-marketing img {
     max-height: 200px;
 }
-
+/*Consolidated these 3 tags to share the same attributes*/
 .search-engine-optimization h2, .online-reputation-management h2, .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
